Fix sidebar button overlapping issue
Add line-height to .sidebar-item, add padding-right for non-flex devices

--- a/resources/scss/components/sidebar.scss
+++ b/resources/scss/components/sidebar.scss
@@ -22,6 +22,8 @@
   min-height: $buttonHeight;
   text-align: left;
   padding-left: $default-padding;
+  line-height: $buttonHeight;
+  padding-right: $default-padding;
 }
 
 .sidebar-current_class {
